--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.6",
     "node-telegram-bot-api": "^0.52.0",
+    "request": "^2.88.2",
     "telegram-format": "^2.0.2"
   }
 }
