--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.6",
     "node-telegram-bot-api": "^0.52.0",
     "request": "^2.88.2",
